--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Alchemy API Configuration
 VITE_ALCHEMY_API_KEY=your_alchemy_api_key_here
-VITE_POLYGON_RPC_URL=https://polygon-mainnet.g.alchemy.com/v2/YOUR_API_KEY
+VITE_MANTLE_RPC_URL=https://mantle-mainnet.g.alchemy.com/v2/YOUR_API_KEY
 
 # Contract Addresses (update after deployment)
 VITE_CHARACTER_TOKEN_ADDRESS=0x0000000000000000000000000000000000000000
